# elonaire

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  bacon.toml  build.rs  index.html  index.scss  nginx.conf  package-lock.json  package.json  robots.txt
.github/workflows/: deploy.yml  pr_check.yml
k3s/: configs.sh  manual.sh
k3s/manifests/: frontend-ingress.yaml  frontend-middlewares.yaml  frontend.yaml
public/: ads.txt  index.html
public/css/: style.css
src/: App.css  App.tsx  app.rs  index.tsx  main.rs
src/components/: About.tsx  Blog.tsx  Contact.tsx  Introduction.tsx  NavigationBar.tsx  Portfolio.tsx  Resume.tsx  ad.rs  back_home.rs  blog_nav.rs  bottom_svg.rs  cookie_consent.rs  example.rs  footer.rs  input.rs  line_separator.rs  loader.rs  mod.rs  nav.rs  no_content_component.rs  page_header.rs  project_card.rs  select.rs  service_card.rs  skill.rs  styled_heading.rs  tabs.rs  textarea.rs  timeline.rs  tooltip.rs  transition.rs
src/components/blog/: blog_post_card.rs  blog_section.rs  featured_blog_post_card.rs  main_banner.rs  mod.rs
src/components/forms/: checkbox.rs  datepicker.rs  input.rs  mod.rs  radio_input.rs  reactive_form.rs  select.rs  textarea.rs  toggle_switch.rs
src/components/general/: accordion.rs  badge.rs  breadcrumbs.rs  button.rs  carousel.rs  chip.rs  collapse.rs  mod.rs  popover.rs  progress.rs  richtext_editor.rs  spinner.rs  stepper.rs  tabs.rs  tag.rs  timeline.rs
src/components/hocs/: protected_route.rs
src/components/modal/: basic_modal.rs  mod.rs  modal.rs  precursor_modal.rs
src/components/molecules/: cookie_banner.rs  flip_card.rs  footer.rs  headline.rs  mod.rs  nav.rs  quick_action.rs  ratecard.rs  section_title.rs  stats_card.rs  top_nav.rs
src/components/schemas/: mock_data.rs  mod.rs  props.rs
src/data/: mod.rs
src/data/context/: blog.rs  mod.rs  shared.rs  store.rs  user.rs  user_resources.rs  users.rs
src/data/models/: blog.rs  mod.rs  resource.rs  (+1 more)
src/schemas/: acl.rs  mod.rs
src/utils/: auth.rs  custom_traits.rs  errors.rs  formatters.rs  forms.rs  graphql_client.rs  mod.rs  syntax_highlight.rs  time.rs
src/views/: about.rs  blog.rs  blog_post.rs  create_portfolio.rs  dashboard.rs  dashboard_home.rs  example.rs  hire_me.rs  home.rs  login.rs  mod.rs  portfolio.rs  professional_details.rs  resume.rs  skills.rs  user_services.rs
styles/: _theme.scss  common.scss  general.scss  index.scss  input.css  output.css
styles/components/: basic_modal.scss  blog_banner.scss  blog_filter.scss  blog_post_card.scss  blog_section.scss  bottom_svg.scss  cookie_consent.scss  footer.scss  nav.scss  portfolio_project.scss  resume_timeline.scss  service_card.scss  skills.scss  tooltip.scss
styles/views/: about.scss  blog.scss  blog_post.scss  hire_me.scss  home.scss  portfolio.scss  resume.scss
(+70 files in other folders)
