[package]
name = "techie-tenka"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
gloo-net = "0.6.0"
gql_client = "1.0.8"
icondata = "0.5.0"
js-sys = "0.3.77"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_icons = "0.6.0"
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
reactive_stores = "0.2.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = [
    "Storage",
    "File",
    "FileList",
    "CustomEventInit",
    "EventInit",
    "Element",
    "DomRect",
    "HtmlFormElement",
] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
