[package]
name = "techie-tenka"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = "0.6.0"
# gql_client = "1.0.8"
gql_client = { git = "https://github.com/elonaire/gql-client-rs", branch = "quick-fixes" }
html2md = "0.2.15"
icondata = "0.5.0"
js-sys = "0.3.77"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_icons = "0.7.1"
leptos_meta = "0.8.6"
leptos_router = "0.8.13"
markdown = "1.0.0"
reactive_stores = "0.4.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = [
    "Storage",
    "File",
    "FileList",
    "CustomEventInit",
    "EventInit",
    "Element",
    "DomRect",
    "HtmlFormElement",
    "HtmlDivElement",
    "Window",
    "Document",
    "HtmlElement",
    "Selection",
    "Range",
    "Node",
    "Navigator",
    "Clipboard",
    "ShareData",
] }
wasm-bindgen-futures = "0.4.61"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
